changed input background color and fixed extra white space under the footer

--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -57,12 +57,13 @@ h1, h2, h3, h4, h5, h6, button {
 #user-input {
     height: 40px;
     width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: #282828;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color:#5a5858;
     color: #fff;
+    border-radius: 500px;
     border: none;
-    padding-left: 10px;
+    padding-left: 15px;
     letter-spacing: .5px;
 }
 
@@ -170,7 +171,7 @@ and (max-width: 600px) {
     .btn {
         width: 290px;
         position: relative;
-        top: 5vh;
+        top: -5vh;
     }
 }
 
@@ -206,11 +207,11 @@ and (max-width: 600px) {
     
     .btn {
         position: relative;
-        top: 15vh;
+        top: -5vh;
     }
     .footer p {
         height: auto;
-        padding: 30px 0;
+        padding: 24px 0;
         text-transform: none;
     }
 }
